--- a/index.html
+++ b/index.html
@@ -126,6 +126,17 @@
                 <a href="https://github.com/ajarpriyatam/Ecommerce" target="_blank">View Code <i
                         class="fa fa-arrow-right"></i></a>
             </div>
+            <div class="course-col col2">
+                <div class="course-col1">
+                    <img src="/image/project12.PNG" alt="">
+                    <p>A fully responsive Business Consultanting website with frontend and backend using Nodejs and Reactjs.</p>
+                </div>
+                <a href="https://www.bizglamo.com/" target="_blank">Go to website <i
+                        class="fa fa-arrow-right"></i></a>
+                <p></p>
+                <a href="https://github.com/ajarpriyatam/bizglamo.github.io" target="_blank">View Code <i
+                        class="fa fa-arrow-right"></i></a>
+            </div>
         </div>
         <h2>Other Projects</h2>
         <div class="row row3">
